--- a/.github/workflows/build-fedora-toolbox.yml
+++ b/.github/workflows/build-fedora-toolbox.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Checkout Push to Registry action
         uses: actions/checkout@v4
 
+      - name: Maximize build space
+        uses: ublue-os/remove-unwanted-software@v6
+
       - name: Verify Fedora distrobox
         uses: EyeCantCU/cosign-action/verify@v0.2.2
         with:
