--- a/.github/workflows/build-kali-toolbox.yml
+++ b/.github/workflows/build-kali-toolbox.yml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   push-ghcr:
     name: Build and push image
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
