--- a/.github/workflows/build-kali-toolbox.yml
+++ b/.github/workflows/build-kali-toolbox.yml
@@ -8,6 +8,7 @@ env:
     IMAGE_NAME: kali-toolbox
     IMAGE_TAGS: latest
     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
+    CONTAINERS: kali-toolbox:lastest
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
