--- a/.github/workflows/build-fedora-toolbox.yml
+++ b/.github/workflows/build-fedora-toolbox.yml
@@ -1,4 +1,4 @@
-name: Build and Push Fedora Toolbox Image
+name: Build and Push Fedora Toolbox
 on:
   schedule:
     - cron: '20 22 * * *'  # 10:20pm everyday
