--- a/.github/workflows/build-jupyter-toolbox.yml
+++ b/.github/workflows/build-jupyter-toolbox.yml
@@ -51,7 +51,7 @@ jobs:
         uses: redhat-actions/buildah-build@v2
         with:
           containerfiles: |
-            ./toolboxes/fedora-toolbox/Containerfile.fedora
+            ./toolboxes/scipy-toolbox/Containerfile.scipy
           image: ${{ env.IMAGE_NAME }}
           tags: ${{ env.IMAGE_TAGS }}
           labels: ${{ steps.meta.outputs.labels }}
