--- a/.github/workflows/build-jupyter-toolbox.yml
+++ b/.github/workflows/build-jupyter-toolbox.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Maximize build space
         uses: ublue-os/remove-unwanted-software@v6
 
-      - name: Verify Fedora distrobox
+      - name: Verify Jupyter distrobox
         uses: EyeCantCU/cosign-action/verify@v0.3.0
         with:
           containers: fedora-distrobox:latest
