--- a/.github/workflows/build-taskwarrior.yml
+++ b/.github/workflows/build-taskwarrior.yml
@@ -1,12 +1,12 @@
 name: Build and Push Taskwarrior container
 on:
   schedule:
-    - cron: '20 22 * * 1'  # 10:20pm Sunday
+    - cron: "20 22 * * 1" # 10:20pm Sunday
   workflow_dispatch:
 env:
-    IMAGE_NAME: taskwarrior
-    IMAGE_TAGS: latest
-    IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
+  IMAGE_NAME: taskwarrior
+  IMAGE_TAGS: latest
+  IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
